--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "md5": "^2.3.0",
     "mongoose": "^5.10.2",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4"
   }
 }
